--- a/index.html
+++ b/index.html
@@ -6,14 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JL Rocks</title>
     <style>
-        body,html { margin: 0; }
-        img {
-            width: 100vw;
-            height: auto;
-        }
+        .gallery {
+    width: 100%;
+    height: 600px;
+    position: relative;
+}
+.gallery .photos {
+    position: relative;
+    height: 100%;
+}
+.gallery .block {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s;
+}
+.gallery .buttons {
+    position: absolute;
+    width: 100%;
+    top: 258px;
+    font-size: 24px;
+}
+.gallery .buttons .prev {
+    border-radius: 0 3px 3px 0;
+    float: left;
+}
+.gallery .buttons .next {
+    border-radius: 3px 0 0 3px;
+    float: right;
+}
+.gallery .buttons a {
+    z-index: 4;
+    position: relative;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+    display: inline-block;
+    padding: 24px 16px;
+}
+.gallery .block.active {
+    opacity: 1;
+}
     </style>
+    <script>
+        function supernova_slider() {
+    let nextBtn = document.querySelector(".gallery .buttons .next"),
+        prevBtn = document.querySelector(".gallery .buttons .prev"),
+        slide = document.querySelectorAll(".gallery .photos .block"),
+        i = 0;
+
+    prevBtn.onclick = (event) => {
+        event.preventDefault();
+
+        slide[i].classList.remove("active");
+        i--;
+
+        if (i < 0) {
+            i = slide.length - 1;
+        }
+        slide[i].classList.add("active");
+    };
+
+    nextBtn.onclick = (event) => {
+        event.preventDefault();
+
+        slide[i].classList.remove("active");
+        i++;
+
+        if (i >= slide.length) {
+            i = 0;
+        }
+
+        slide[i].classList.add("active");
+    };
+
+    slider_callback();
+    let sliderInterval = window.setInterval(slider_callback, 3000);
+
+    function slider_callback() {
+        nextBtn.click();
+    }
+}
+
+supernova_slider();
+    </script>
 </head>
 <body>
-    <img src="jlrocks-rings-chunky_bands.jpg" alt="" width="3840" height="2160" >
+    <div class="homepage-hero-slider gallery">
+        <div class="photos">
+            <div class="slide block active" style="background: url(jlrocks-rings-chunky_bands.jpg) no-repeat center center; background-size: cover;"></div>
+            <div class="slide block active" style="background: url(jlrocks-neckalces-droplet_necklace.jpg) no-repeat center center; background-size: cover;"></div>
+            <div class="slide block active" style="background: url(bracelet-chain-with-diamonds-link-rg.jpg) no-repeat center center; background-size: cover;"></div>
+        </div>
+    </div>
 </body>
 </html>
