--- a/index.html
+++ b/index.html
@@ -94,11 +94,16 @@ supernova_slider();
     </script>
 </head>
 <body>
+
     <div class="homepage-hero-slider gallery">
         <div class="photos">
             <div class="slide block active" style="background: url(jlrocks-rings-chunky_bands.jpg) no-repeat center center; background-size: cover;"></div>
-            <div class="slide block active" style="background: url(jlrocks-neckalces-droplet_necklace.jpg) no-repeat center center; background-size: cover;"></div>
-            <div class="slide block active" style="background: url(bracelet-chain-with-diamonds-link-rg.jpg) no-repeat center center; background-size: cover;"></div>
+            <div class="slide block" style="background: url(jlrocks-neckalces-droplet_necklace.jpg) no-repeat center center; background-size: cover;"></div>
+            <div class="slide block" style="background: url(bracelet-chain-with-diamonds-link-rg.jpg) no-repeat center center; background-size: cover;"></div>
+    </div>
+        <div class="buttons">
+            <a class="prev" href="#"><i class="fas fa-fw fa-arrow-left"></i></a>
+            <a class="next" href="#"><i class="fas fa-fw fa-arrow-right"></i></a>
         </div>
     </div>
 </body>
